auth done and api gateway setup done

--- a/auth/.env.example
+++ b/auth/.env.example
@@ -2,7 +2,7 @@
 SERVER_PORT=
 NODE_ENV=development
 
-FRONTEND_URL
+# FRONTEND_URL
 # docker run --name container-name -e POSTGRES_PASSWORD=mysecretpassword -p 5432:5432 -d postgres
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 REDIS_URL=redis://localhost:6379
