--- a/auth/package.json
+++ b/auth/package.json
@@ -36,11 +36,12 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.8.1",
     "prettier": "^3.6.2",
-    "prisma": "^6.18.0",
+    "prisma": "^7.2.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -49,6 +50,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
     "rate-limiter-flexible": "^8.1.0",
     "redis": "^5.8.3",
     "tsx": "^4.20.6",
