--- a/order/package.json
+++ b/order/package.json
@@ -1,12 +1,29 @@
 {
-	"dependencies": {
-		"@prisma/adapter-pg": "^7.0.1",
-		"@prisma/client": "^7.0.1"
-	},
-	"devDependencies": {
-		"@types/node": "^24.10.1",
-		"prisma": "^7.0.1",
-		"tsx": "^4.20.6",
-		"typescript": "^5.9.3"
-	}
+  "name": "order-service",
+  "version": "1.0.0",
+  "main": "dist/server.js",
+  "type": "module",
+  "scripts": {
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
+  },
+  "dependencies": {
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "pg": "^8.16.3",
+    "razorpay": "^2.9.6"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.4",
+    "@types/express": "^5.0.5",
+    "@types/node": "^24.10.1",
+    "prisma": "^7.0.1",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
+  }
 }
