api gateway setup with proper routing , middleware alongside fixed order,cart,and oroduct services routes

--- a/product/package.json
+++ b/product/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "@types/multer": "^2.0.0",
+    "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
