all changes are done

--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -23,6 +23,7 @@
     "helmet": "^8.1.0",
     "http-proxy-middleware": "^3.0.5",
     "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.3",
     "rate-limit-redis": "^4.2.3",
     "tsx": "^4.20.6",
     "winston": "^3.18.3"
