--- a/cart/package.json
+++ b/cart/package.json
@@ -2,12 +2,12 @@
   "name": "cart",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,11 @@
   "packageManager": "pnpm@10.18.0",
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/express-rate-limit": "^6.0.2",
+    "@types/helmet": "^4.0.0",
     "@types/node": "^24.10.1",
     "prisma": "^7.0.1",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
@@ -24,11 +27,15 @@
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
     "@types/cors": "^2.8.19",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "logger": "^0.0.1",
     "pg": "^8.16.3",
+    "winston": "^3.19.0",
     "zod": "^4.1.12"
   }
 }
