--- a/order/package.json
+++ b/order/package.json
@@ -15,13 +15,21 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "logger": "^0.0.1",
     "pg": "^8.16.3",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "winston": "^3.19.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
     "@types/express": "^5.0.5",
+    "@types/express-rate-limit": "^6.0.2",
+    "@types/helmet": "^4.0.0",
     "@types/node": "^24.10.1",
+    "@types/winston": "^2.4.4",
     "prisma": "^7.0.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
