--- a/product/package.json
+++ b/product/package.json
@@ -2,9 +2,9 @@
   "name": "product",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "logger": "^0.0.1",
@@ -32,9 +33,11 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/express-rate-limit": "^6.0.2",
     "@types/node": "^24.10.0",
     "@types/winston": "^2.4.4",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
