--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
-	"dependencies": {
-		"axios": "^1.13.2",
-		"zustand": "^5.0.9"
-	}
+  "name": "ec",
+  "version": "1.0.0",
+    "private": true,
+
+  "description": "",
+  "main": "index.js",
+ "scripts": {
+        "prepare": "husky install"
+    },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.25.0",
+  "devDependencies": {
+        "husky": "^8.0.0",
+        "lint-staged": "^16.2.7",
+        "prettier": "^3.8.0",
+        "prettier-plugin-tailwindcss": "^0.7.2",
+        "typescript": "^5.9.3"
+    },
+    "lint-staged": {
+        "fe/**/*.{js,ts,tsx,jsx,json,css,md}": [
+            "prettier --write --ignore-unknown"
+        ],
+        "api/**/*.{js,ts,tsx,json,md}": [
+            "prettier --write --ignore-unknown"
+        ]
+    }
 }
