feat: refactor database schema and add user module
- Updated orderItems, orders, paymentRefunds, payments, productVariantImages, productVariants, products, userAddresses, vendorLocations, vendorVariantImages, and vendorVariantInventory schemas to improve structure and add indexing.
- Introduced user module with sign-up and verification functionality, including user.controller, user.routes, user.schema, and user.service.
- Implemented context for tRPC to integrate database access.
- Adjusted server setup to utilize new context and user routes.
- Cleaned up unused code and comments in various files.

--- a/api/.env.example
+++ b/api/.env.example
@@ -2,7 +2,7 @@
 SERVER_PORT=3000
 NODE_ENV=development
 
-# FRONTEND_URL
+FRONTEND_URL=http://localhost:3000
 # docker run --name container-name -e POSTGRES_PASSWORD=mysecretpassword -p 5432:5432 -d postgres
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 REDIS_URL=redis://localhost:6379
@@ -12,19 +12,9 @@ JWT_SECRET=secret
 JWT_ACCESS_TOKEN_EXPIRY=2D
 JWT_REFRESH_TOKEN_EXPIRY=5D
 
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_VIRTUAL_NUMBER=
-
-GOOGLE_CLIENT_ID=
-GOOGLE_REDIRECT_URI=
-GOOGLE_CLIENT_SECRET=
-
-# from Api Gateway
-PORT=3000
-NODE_ENV=development
-AUTH_SERVICE_URL= 
-
-ACCESS_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
-REDIS_URL=redis://localhost:6379
