--- a/api/package.json
+++ b/api/package.json
@@ -13,10 +13,12 @@
     "packageManager": "pnpm@10.25.0",
     "dependencies": {
         "@trpc/server": "^11.8.1",
+        "@types/jsonwebtoken": "^9.0.10",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "drizzle-orm": "^0.45.1",
         "express": "^5.2.1",
+        "jsonwebtoken": "^9.0.3",
         "postgres": "^3.4.8",
         "redis": "^5.10.0",
         "twilio": "^5.11.2",
