--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
         // File Layout
-        "rootDir": "./src",
+        // "rootDir": "",
         "outDir": "./dist",
 
         // Environment Settings
         // See also https://aka.ms/tsconfig/module
-        "module": "nodenext",
+        "module": "esnext",
+        "moduleResolution": "node",
         "target": "esnext",
         "types": [],
         // For nodejs:
