--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "dev": "tsx watch src/server.ts"
+        "dev": "tsx watch src/server.ts",
+        "build": "tsc",
+        "start": "node dist/src/server.js"
     },
     "keywords": [],
     "author": "",
@@ -19,6 +21,7 @@
         "drizzle-orm": "^0.45.1",
         "express": "^5.2.1",
         "jsonwebtoken": "^9.0.3",
+        "libphonenumber-js": "^1.12.35",
         "postgres": "^3.4.8",
         "redis": "^5.10.0",
         "twilio": "^5.11.2",
