--- a/api/.env.example
+++ b/api/.env.example
@@ -6,7 +6,7 @@ FRONTEND_URL=http://localhost:3000
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 REDIS_URL=redis://localhost:6379
 
-SLAT_ROUNDS=45
+SALT_ROUNDS=45
 # User Token Credentials
 USER_JWT_ACCESS_TOKEN_SECRET=secret
 USER_JWT_ACCESS_TOKEN_EXPIRY=2D
