--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,49 +1,4 @@
 {
-    "compilerOptions": {
-        // File Layout
-        // "rootDir": "",
-        "outDir": "./dist",
-
-        // Environment Settings
-        // See also https://aka.ms/tsconfig/module
-        "module": "esnext",
-        "moduleResolution": "node",
-        "target": "esnext",
-        "types": [],
-        // For nodejs:
-        // "lib": ["esnext"],
-        // "types": ["node"],
-        // and npm install -D @types/node
-
-        // Other Outputs
-        "sourceMap": true,
-        "declaration": true,
-        "declarationMap": true,
-
-        // Stricter Typechecking Options
-        "noUncheckedIndexedAccess": true,
-        "exactOptionalPropertyTypes": true,
-
-        // Style Options
-        // "noImplicitReturns": true,
-        // "noImplicitOverride": true,
-        // "noUnusedLocals": true,
-        // "noUnusedParameters": true,
-        // "noFallthroughCasesInSwitch": true,
-        // "noPropertyAccessFromIndexSignature": true,
-
-        // Recommended Options
-        "strict": true,
-        "jsx": "react-jsx",
-        "verbatimModuleSyntax": false,
-        "isolatedModules": true,
-        "noUncheckedSideEffectImports": true,
-        "moduleDetection": "force",
-        "skipLibCheck": true,
-
-        // imported from old project
-        "baseUrl": ".",
-        "esModuleInterop": true, // allows "import express from 'express'"
-        "forceConsistentCasingInFileNames": true
-    }
+    "files": [],
+    "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }]
 }
