Add board token credentials to environment configuration

--- a/api/.env.example
+++ b/api/.env.example
@@ -19,6 +19,12 @@ VENDOR_JWT_ACCESS_TOKEN_EXPIRY=2D
 VENDOR_JWT_REFRESH_TOKEN_SECRET=refreshToken
 VENDOR_JWT_REFRESH_TOKEN_EXPIRY=5D
 
+# Board Token Credentials
+BOARD_JWT_ACCESS_TOKEN_SECRET=secret
+BOARD_JWT_ACCESS_TOKEN_EXPIRY=2D
+BOARD_JWT_REFRESH_TOKEN_SECRET=refreshToken
+BOARD_JWT_REFRESH_TOKEN_EXPIRY=5D
+
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_VIRTUAL_NUMBER=
