Enhance order management features and update environment configuration
- Added new order-related tasks to README
- Updated environment variables for frontend URLs
- Expanded orderItems schema with product and vendor details
- Included delivery address in orders schema for historical accuracy
- Fixed vendor variant inventory relation reference
- Introduced global vendor flag in vendors schema
- Corrected product variant image schema to use URL validation

--- a/api/.env.example
+++ b/api/.env.example
@@ -2,7 +2,9 @@ SERVER_PORT=4000
 NODE_ENV=development
 
 FRONTEND_URL=http://localhost:3000
-# docker run --name container-name -e POSTGRES_PASSWORD=mysecretpassword -p 5432:5432 -d postgres
+EC_FE_URL=http://localhost:3000
+BOARD_FE_URL=http://localhost:3000
+# docker run --name container-name -e POSTGRES_PASSWORD=postgres -p 5432:5432 -d postgres
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 REDIS_URL=redis://localhost:6379
 
